--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "url": "https://github.com/erikras/redux-form-material-ui"
   },
   "scripts": {
-    "build": "npm run build:lib && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "build:lib": "babel src --out-dir lib",
-    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-form-material-ui.js",
-    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-form-material-ui.min.js",
+    "build": "npx babel src --out-dir lib --ignore '**/*.spec.js'",
     "clean": "rimraf dist lib",
     "lint": "eslint src",
-    "pre-publish": "npm run test && npm run lint && npm run clean && npm run build",
-    "test": "mocha --compilers js:babel-register --recursive --recursive \"src/**/__tests__/*\" --require src/__tests__/setup.js",
+    "prepublish": "npm run test && npm run lint && npm run clean && npm run build",
+    "test": "jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
     "test:codecov": "cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js"
@@ -36,19 +32,12 @@
   },
   "homepage": "https://github.com/Aldrixan/redux-form-material-ui",
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "@material-ui/core": "^3.0.1",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-preset-es2015-no-commonjs": "0.0.2",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
     "codecov.io": "^0.1.6",
     "cross-env": "^6.0.0",
     "eslint": "^6.4.0",
@@ -57,9 +46,11 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "expect": "^24.9.0",
     "expect-jsx": "^5.0.0",
     "isparta": "^4.1.1",
+    "jest": "^24.9.0",
     "jsdom": "^15.1.1",
     "lodash.noop": "^3.0.1",
     "mocha": "^6.2.0",
@@ -100,5 +91,9 @@
         "*.js"
       ]
     }
-  ]
+  ],
+  "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "core-js": "^3.2.1"
+  }
 }
