--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.6.2",
     "@material-ui/core": "^3.0.1",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "codecov.io": "^0.1.6",
     "cross-env": "^6.0.0",
     "eslint": "^6.4.0",
@@ -61,6 +63,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-tap-event-plugin": "^3.0.3",
+    "react-test-renderer": "^16.9.0",
     "rimraf": "^3.0.0",
     "webpack": "^4.41.0"
   },
