--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "lint": "eslint src",
     "prepublish": "npm run test && npm run lint && npm run clean && npm run build",
     "test": "jest",
-    "test:watch": "npm test -- --watch",
-    "test:cov": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
-    "test:codecov": "cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js"
+    "test:watch": "npm test -- --watch"
   },
   "keywords": [
     "redux",
@@ -97,6 +95,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
+    "@types/material-ui": "^0.21.7",
     "core-js": "^3.2.1"
   }
 }
