--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-form-material-ui",
-  "version": "5.0.0-beta.3",
+  "version": "6.0.0",
   "description": "An adapter between Redux Form and Material UI components",
   "main": "./lib/index.js",
   "repository": {
