--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-form-material-ui",
+  "name": "redux-form-material-ui-adapter",
   "version": "6.0.0",
   "description": "An adapter between Redux Form and Material UI components",
   "main": "./lib/index.js",
@@ -72,8 +72,6 @@
   "files": [
     "README.md",
     "lib",
-    "es",
-    "dist",
     "index.d.ts"
   ],
   "nyc": {
