--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,23 @@
 language: node_js
 
+branches:
+  only:
+    - master
+    - develop
+
 before_install:
-  - npm install -g npm@latest
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
 node_js:
-  - "6"
   - "7"
   - "8"
+  - "10"
   - "stable"
 
 script:
-  - npm run lint
-  - npm test
+  - yarn lint
+  - yarn test
 
 after_success:
-  - npm run test:cov
-  - npm run test:codecov
+  - yarn test:codecov
