--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,17 @@
 language: node_js
 
-branches:
-  only:
-    - master
-    - develop
-
 before_install:
-  - curl -o -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
-  - export PATH="$HOME/.yarn/bin:$PATH"
+    - curl -o -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+    - export PATH="$HOME/.yarn/bin:$PATH"
 
 node_js:
-  - "8"
-  - "10"
-  - "stable"
+    - '8'
+    - '10'
+    - 'stable'
 
 script:
-  - yarn lint
-  - yarn test
+    - yarn lint
+    - yarn test
 
 after_success:
-  - yarn test:codecov
+    - yarn test:codecov
