--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
         "@babel/preset-env": "^7.6.2",
         "@babel/preset-react": "^7.0.0",
         "@babel/register": "^7.6.2",
+        "@date-io/date-fns": "^1.3.11",
         "@material-ui/core": "^4.5.0",
+        "@material-ui/pickers": "^3.2.7",
         "babel-eslint": "^10.0.3",
         "babel-jest": "^24.9.0",
         "coveralls": "^3.0.6",
         "cross-env": "^6.0.3",
+        "date-fns": "^2.0.0-beta.5",
         "eslint": "^6.5.1",
         "eslint-config-react-app": "^5.0.2",
         "eslint-plugin-flowtype": "^4.3.0",
@@ -66,9 +69,11 @@
         "webpack": "^4.41.0"
     },
     "peerDependencies": {
+        "@date-io/date-fns": "^1.3.11",
         "@material-ui/core": "^3.0.0",
+        "@material-ui/pickers": "^3.2.7",
         "react": "^15.0.0 || ^16.0.0 ",
-        "redux-form": "^6.0.0 || ^7.0.0"
+        "redux-form": "^6.0.0 || ^7.0.0 || ^8.0.0"
     },
     "files": [
         "README.md",
@@ -93,7 +98,6 @@
     ],
     "dependencies": {
         "@babel/polyfill": "^7.6.0",
-        "@material-ui/pickers": "^3.2.7",
         "@types/material-ui": "^0.21.7",
         "core-js": "^3.2.1"
     }
