--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
         "mocha-lcov-reporter": "^1.3.0",
         "nyc": "^14.1.1",
         "prettier": "^1.18.2",
-        "react": "^16.10.2",
         "react-addons-test-utils": "^15.6.2",
         "react-dom": "^16.10.2",
         "react-tap-event-plugin": "^3.0.3",
@@ -70,10 +69,11 @@
     },
     "peerDependencies": {
         "@date-io/date-fns": "^1.3.11",
+        "date-fns": "^2.0.0-beta.5",
         "@material-ui/core": "^3.0.0",
         "@material-ui/pickers": "^3.2.7",
-        "react": "^15.0.0 || ^16.0.0 ",
-        "redux-form": "^6.0.0 || ^7.0.0 || ^8.0.0"
+        "redux-form": "^6.0.0 || ^7.0.0 || ^8.0.0",
+        "react": "^16.0.0"
     },
     "files": [
         "README.md",
@@ -100,6 +100,11 @@
         "@babel/polyfill": "^7.6.0",
         "@types/material-ui": "^0.21.7",
         "classnames": "^2.2.6",
-        "core-js": "^3.2.1"
+        "core-js": "^3.2.1",
+        "@babel/cli": "^7.6.2",
+        "@babel/core": "^7.6.2",
+        "@babel/preset-env": "^7.6.2",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/register": "^7.6.2"
     }
 }
